--- a/src/pug/partials/header.pug
+++ b/src/pug/partials/header.pug
@@ -7,23 +7,23 @@ header.header
             nav.nav
                 ul.links.d-flex.align-items-center
                     li.item
-                        a.link(href="#" class='text-uppercase')
+                        a.link(href="index.html" class='text-uppercase')
                             i.fas.fa-home
                             | Home
                     li.item
-                        a.link(href="#" class='text-uppercase')
+                        a.link(href="leaderboard.html" class='text-uppercase')
                             i.fas.fa-chalkboard
                             | leaderboard
                     li.item
-                        a.link(href="#" class='text-uppercase')
+                        a.link(href="challenges.html" class='text-uppercase')
                             i.fas.fa-chess-board
                             | challenges
                     li.item
-                        a.link(href="#" class='text-uppercase')
+                        a.link(href="profile.html" class='text-uppercase')
                             i.far.fa-user
                             | my profile
                     li.item
-                        a.link(href="#" class='text-uppercase')
+                        a.link(href="login.html" class='text-uppercase')
                             i.fas.fa-sign-in-alt
                             | login
             i.fas.fa-expand.toggle-fullscreen.fa-lg.d-lg-block.d-none
