--- a/src/pug/partials/footerScripts.pug
+++ b/src/pug/partials/footerScripts.pug
@@ -1,9 +1,10 @@
 
-script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js')
+script(src='https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js')
+script(src='https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js')
 script(src='https://cdn.jsdelivr.net/npm/darkmode-js@1.5.3/lib/darkmode-js.min.js')
-script(src='https://cdnjs.cloudflare.com/ajax/libs/datedropper/2.0/datedropper.min.js')
 script(src='js/all.min.js')
