--- a/src/pug/partials/header.pug
+++ b/src/pug/partials/header.pug
@@ -26,7 +26,13 @@ header.header
                         a.link(href="login.html" class='text-uppercase')
                             i.fas.fa-sign-in-alt
                             | login
-            i.fas.fa-expand.toggle-fullscreen.fa-lg.d-lg-block.d-none
+            i.toggle-fullscreen.d-lg-block.d-none
+                svg(width='20', height='20', viewBox='0 0 24 23', fill='none')
+                    path(d='M15.8732 1.27464H23V8.09154', stroke='white', stroke-width="2")
+                    path(d='M22.8451 15.3732L22.8451 22.5L16.0282 22.5', stroke='white', stroke-width="2")
+                    path(d='M8.12676 22.3451L1 22.3451L1 15.5282', stroke='white', stroke-width="2")
+                    path(d='M1.15493 8.24648L1.15493 1.11971L7.97183 1.11971', stroke='white', stroke-width="2")
+
             .bars.d-lg-none
                 - for(var i = 0; i <= 2; i++)
                     span.line
