--- a/src/sass/partials/_login.scss
+++ b/src/sass/partials/_login.scss
@@ -198,6 +198,8 @@
                     background: rgba(0,0,0, 0.1);
                     display: none;
                     li {
+                        list-style-type: circle;
+                        list-style-position: inside;
                         padding: .6rem 1rem .6rem 2rem;
                         font-size: .8rem;
                         letter-spacing: 1px;
