--- a/src/sass/partials/_homePage.scss
+++ b/src/sass/partials/_homePage.scss
@@ -340,11 +340,11 @@
   }
 }
 
-// SPONSERS STYLE
-.sponsers {
+// sponsors STYLE
+.sponsors {
   .container {
     padding: 2rem 0;
-    .sponsers-slider {
+    .sponsors-slider {
       display: flex;
       justify-content: space-evenly;
       .item {
