--- a/src/pug/login.pug
+++ b/src/pug/login.pug
@@ -4,7 +4,7 @@ html
     head
         include partials/head
     body
-        include partials/header
+        include components/header
         section.log-page(data-aos='fade-up' data-aos-offset='0' data-aos-duration="700")
             .container
                 .row.py-5
@@ -88,25 +88,9 @@ html
                     .col-lg-6.d-lg-block.d-none
                         .bg-form
 
-        section.sponsers.my-5(data-aos='fade' data-aos-offset='0' data-aos-duration="2000")
-            .container
-                .sponsers-slider
-                    .item
-                        img(src='img/sponsersSlider/slide01.png' class='img-fluid')
-                    .item
-                        img(src='img/sponsersSlider/slide02.png' class='img-fluid')
-                    .item
-                        img(src='img/sponsersSlider/slide03.png' class='img-fluid')
-                    .item
-                        img(src='img/sponsersSlider/slide04.jpg' class='img-fluid')
-                    .item
-                        img(src='img/sponsersSlider/slide02.png' class='img-fluid')
-                    .item
-                        img(src='img/sponsersSlider/slide05.jpg' class='img-fluid')
-                    .item
-                        img(src='img/sponsersSlider/slide01.png' class='img-fluid')
 
-        include partials/footer
+        include components/sponsors
+        include components/footer
         include partials/footerScripts
         script(type="text/javascript").
             var panelOne = $('.form-panel.two').height(),
