--- a/src/pug/leaderboard.pug
+++ b/src/pug/leaderboard.pug
@@ -18,27 +18,27 @@ html
                     tbody
                         tr
                             td 1
-                            td
+                            td.player-info
                                 img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.m-0.d-inline-block.text-capitalize player name
+                                h6.name.name.m-0.d-inline-block.text-capitalize player name
                             td 5
                             td 6
                             td 8
                             td 2
                         tr
                             td 1
-                            td
+                            td.player-info
                                 img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.m-0.d-inline-block.text-capitalize player name
+                                h6.name.m-0.d-inline-block.text-capitalize player name
                             td 5
                             td 6
                             td 8
                             td 2
                         tr
                             td 1
-                            td
+                            td.player-info
                                 img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
-                                h6.m-0.d-inline-block.text-capitalize player name
+                                h6.name.m-0.d-inline-block.text-capitalize player name
                             td 5
                             td 6
                             td 8
