--- a/src/pug/partials/footerScripts.pug
+++ b/src/pug/partials/footerScripts.pug
@@ -1,5 +1,5 @@
 
-script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js')
+script(src='http://code.jquery.com/jquery-3.4.1.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js')
 script(src='https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js')
