--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,6 +5,11 @@ html
         include partials/head
     body
         include components/header
+        section.hero
+            .container
+                .inner-hero.text-center
+                    h1.m-0.text-uppercase.stroked-title bandeja
+                        p.text-capitalize.m-0 community of challenge
         section.banner
             .container
                 .inner-banner.px-md-3
@@ -25,23 +30,23 @@ html
                             .col-lg-5
                                 .text-slider.h-100.mt-3.mt-lg-0
                                     .text--slide
-                                        h1.text-uppercase.stroked-title
+                                        h2.text-uppercase.stroked-title
                                             span padel is awesome
                                         p.text-capitalize Lorem ipsum dolor sit amet lorem5 consectetur adipisicing elit. Doloribus blanditiis beatae distinctio quibusdam, quae delectus non saepe. Quisquam aliquam quaerat eos nam quis? Alias nulla fugit eaque ab sequi molestiae mollitia aliquam adipisci tempore facere delectus modi, unde at, corporis minus magnam! Vel iure ab vitae enim, quae possimus explicabo labore aspernatur consequuntur modi aperiam obcaecati omnis quisquam eligendi, assumenda id hic libero suscipit culpa magni? Unde consequatur obcaecati animi architecto esse pariatur adipisci enim. Incidunt tempore voluptates sunt nisi hic sint atque vel excepturi pariatur debitis quo, aperiam velit minus recusandae quia? Id obcaecati nisi dolor voluptate adipisci inventore? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus rem totam obcaecati magnam velit sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id.
                                     .text--slide
-                                        h1.text-uppercase.stroked-title
+                                        h2.text-uppercase.stroked-title
                                             span padel is nice sport to do
                                         p.text-capitalize Lorem ipsum dolor, Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatibus ea nobis ipsa id inventore. adipisicing elit. Autem, laudantium. sit amet consectetur adipisicing elit. Voluptate unde alias necessitatibus molestias nihil eum deserunt eaque minima iste asperiores. Fugit maxime nulla recusandae eos, distinctio reprehenderit temporibus veniam tempore!
                                     .text--slide
-                                        h1.text-uppercase.stroked-title
+                                        h2.text-uppercase.stroked-title
                                             span padel is beautiful
                                         p.text-capitalize Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatibus ea nobis ipsa id inventore. adipisicing elit. Eos mollitia distinctio voluptatem reprehenderit fugiat. Facilis doloremque repudiandae earum eum explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur dicta velit fugit! sit amet consectetur, adipisicing elit. Ab, vero! Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     .text--slide
-                                        h1.text-uppercase.stroked-title
+                                        h2.text-uppercase.stroked-title
                                             span padel is unique
                                         p.text-capitalize Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatibus ea nobis ipsa id inventore. adipisicing elit. Eos mollitia distinctio voluptatem reprehenderit fugiat. Facilis doloremque repudiandae earum eum explicabo. sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. consectetur adipisicing elit. Beatae eaque cumque delectus minus animi. Quaerat cum eveniet voluptatum et minus sequi commodi eius porro accusamus! Suscipit facere quidem vitae eveniet cupiditate. At facilis sunt dolores.
                                     .text--slide
-                                        h1.text-uppercase.stroked-title
+                                        h2.text-uppercase.stroked-title
                                             span padel is amazing
                                         p.text-capitalize Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatibus ea nobis ipsa id inventore. adipisicing elit. Eos mollitia distinctio voluptatem reprehenderit fugiat. Facilis doloremque repudiandae earum eum explicabo. sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aperiam soluta ipsa maxime pariatur id! consectetur adipisicing elit. Quos aspernatur voluptates quia labore mollitia tempore maiores hic adipisci!
                         .login-corner
