--- a/src/pug/leaderboard.pug
+++ b/src/pug/leaderboard.pug
@@ -43,6 +43,51 @@ html
                             td 6
                             td 8
                             td 2
+                        tr
+                            td 1
+                            td.player-info
+                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize player name
+                            td 5
+                            td 6
+                            td 8
+                            td 2
+                        tr
+                            td 1
+                            td.player-info
+                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize player name
+                            td 5
+                            td 6
+                            td 8
+                            td 2
+                        tr
+                            td 1
+                            td.player-info
+                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize player name
+                            td 5
+                            td 6
+                            td 8
+                            td 2
+                        tr
+                            td 1
+                            td.player-info
+                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize player name
+                            td 5
+                            td 6
+                            td 8
+                            td 2
+                        tr
+                            td 1
+                            td.player-info
+                                img(src='https://placehold.it/35x35' alt='').mr-2.img-fluid.rounded-circle.d-inline-block
+                                h6.name.m-0.d-inline-block.text-capitalize player name
+                            td 5
+                            td 6
+                            td 8
+                            td 2
 
         include components/sponsors
         include components/footer
