--- a/src/pug/profile.pug
+++ b/src/pug/profile.pug
@@ -10,23 +10,37 @@ html
                 .row
                     .col-lg-4.mt-5
                         .profile-card.rounded-0
-                            img(src='https://placehold.it/400x400' class='img-fluid h-100')
+                            ul.text-capitalize
+                                h2.text-capitalize
+                                    | statistics
+                                li
+                                    | sets played : 120
+                                li
+                                    | sets won : 85
+                                li
+                                    | sets lost : 15
+                                li
+                                    | games won : 65
+                                li
+                                    | games lost : 15
                     .col-lg-4
                         .profile-card
                             .header
                                 a(target='_blank' href='#')
                                     img.hoverZoomLink(src='https://placehold.it/150x150')
-                                h1
-                                    | John Doe
-                                h2
-                                    | Better Visuals
-                            .profile-bio
-                                p
-                                    | It takes monumental improvement for us to change how we live our lives. Design is the way we access that improvement.
+                                h2.text-capitalize
+                                    | player name
+                                ul.text-capitalize
+                                    li
+                                        | rating : 12
+                                    li
+                                        | player position : right
+                                    li
+                                        | height : 185 cm
                     .col-lg-4.mt-5
                         .profile-card.rounded-0
                             img(src='https://placehold.it/400x400' class='img-fluid h-100')
-
+                                
 
         include components/sponsors
         include components/footer
